tests/errors/lazy_inline_fragment_nonnull_mismatch.dang
# Error: non-null lazy inline fragment that doesn't match

type Cat {
  name: String!
}

type Dog {
  name: String!
}

union Pet = Cat | Dog

cat: Pet! = Cat(name: "Whiskers")

# This should error at runtime - cat is a Cat, not a Dog
let oops = cat.{... on Dog!}
print(oops)
